overlays/dev/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: aashraf756/service-auth-passgenius:gfupqtzq
          ports:
            - containerPort: 8080
