overlays/dev/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress  # You can rename this as needed
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
    - host: microservices.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authentication
                port:
                  number: 80
